manifests/goto-nrw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goto-nrw
  namespace: goto-nrw
  labels:
    app: goto-nrw
spec:
  ports:
    - port: 80
      protocol: TCP
      name: ui
  selector:
    app: goto-nrw
