manifests/goto-nrw/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goto-nrw
  namespace: goto-nrw
  labels:
    app: goto-nrw
    component: ingress
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: goto-nrw.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: goto-nrw
          servicePort: 80
        path: /
  tls:
  - hosts:
    - goto-nrw.codeformuenster.org
    secretName: goto-nrw-tls
